--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,2 +1,2 @@
-• This Valentine's Day, we have good news if you're planning on getting back together with your iPad after taking a break: A bug that could cause Signal to crash when attempting to re-link an unlinked device has been fixed.
-• If you're in a relationship with multiple devices, group call notifications on your iPhone will be automatically dismissed when you answer that call on your iPad or Desktop.
+• Wir haben gute Nachrichten für dich, wenn du am Valentinstag vorhast, dich nach einer kleinen Auszeit wieder mit deinem iPad zu vereinen: Der Fehler, der dazu führen konnte, dass Signal abstürzt, wenn du ein nicht gekoppeltes Gerät wieder verbinden wolltest, wurde behoben.
+• Wenn du in einer Beziehung mit mehreren Geräten bist, werden Benachrichtigungen für Gruppenanrufe auf deinem iPhone automatisch ausgeblendet, falls du den Anruf auf deinem iPad oder Desktop annimmst.
