--- a/fastlane/metadata/he/release_notes.txt
+++ b/fastlane/metadata/he/release_notes.txt
@@ -1,2 +1,2 @@
-• This Valentine's Day, we have good news if you're planning on getting back together with your iPad after taking a break: A bug that could cause Signal to crash when attempting to re-link an unlinked device has been fixed.
-• If you're in a relationship with multiple devices, group call notifications on your iPhone will be automatically dismissed when you answer that call on your iPad or Desktop.
+• תיקנו באג שלפעמים גרם ל–Signal להתרסק בזמן ניסיון לקשר מחדש מכשיר iPad.
+• מעכשיו, התראות של שיחות קבוצתיות ב–iPhone שלך מתבטלות אוטומטית אם ענית לשיחה מה–iPad או משולחן העבודה.
