--- a/fastlane/metadata/no/release_notes.txt
+++ b/fastlane/metadata/no/release_notes.txt
@@ -1,2 +1,2 @@
-• This Valentine's Day, we have good news if you're planning on getting back together with your iPad after taking a break: A bug that could cause Signal to crash when attempting to re-link an unlinked device has been fixed.
-• If you're in a relationship with multiple devices, group call notifications on your iPhone will be automatically dismissed when you answer that call on your iPad or Desktop.
+• Vi har rettet opp i en feil som fører til at Signal noen ganger krasjer når man forsøker å koble til en iPad på nytt.
+• Nå fjernes varslet om et nytt gruppeanrop på iPhonen din hvis du svarer på anropet på en iPad eller PC.
