--- a/fastlane/metadata/pt-BR/release_notes.txt
+++ b/fastlane/metadata/pt-BR/release_notes.txt
@@ -1,2 +1,2 @@
-• This Valentine's Day, we have good news if you're planning on getting back together with your iPad after taking a break: A bug that could cause Signal to crash when attempting to re-link an unlinked device has been fixed.
-• If you're in a relationship with multiple devices, group call notifications on your iPhone will be automatically dismissed when you answer that call on your iPad or Desktop.
+• Corrigimos um bug que estava travando o app do Signal ao tentar reconectar um iPad não conectado.
+• As notificações de chamadas de grupo no seu iPhone agora são recusadas automaticamente quando você atende a chamada no seu iPad ou Desktop.
