--- a/fastlane/metadata/th/release_notes.txt
+++ b/fastlane/metadata/th/release_notes.txt
@@ -1,2 +1,2 @@
-• This Valentine's Day, we have good news if you're planning on getting back together with your iPad after taking a break: A bug that could cause Signal to crash when attempting to re-link an unlinked device has been fixed.
-• If you're in a relationship with multiple devices, group call notifications on your iPhone will be automatically dismissed when you answer that call on your iPad or Desktop.
+• เราแก้ไขบั๊กซึ่งอาจเคยเป็นสาเหตุให้ Signal หยุดทำงานในตอนที่คุณพยายามจะเชื่อมโยง iPad อีกครั้งหลังจากเลิกเชื่อมโยงอุปกรณ์ไปแล้ว
+• จากนี้ไป การแจ้งเตือนสายโทรกลุ่มบน iPhone จะหายไปเองอัตโนมัติเมื่อคุณรับสายนั้นบน iPad หรือเดสก์ท็อปแล้ว
