--- a/fastlane/metadata/zh-Hans/release_notes.txt
+++ b/fastlane/metadata/zh-Hans/release_notes.txt
@@ -1,2 +1,2 @@
-• This Valentine's Day, we have good news if you're planning on getting back together with your iPad after taking a break: A bug that could cause Signal to crash when attempting to re-link an unlinked device has been fixed.
-• If you're in a relationship with multiple devices, group call notifications on your iPhone will be automatically dismissed when you answer that call on your iPad or Desktop.
+• 我们修复了一个漏洞，该漏洞会在重新链接一个未链接的 iPad 时导致 Signal 崩溃。
+• 现在当您在 iPad 或 Desktop 上接通来电时，您 iPhone 上的群组通话通知会自动取消。
