--- a/fastlane/metadata/es-MX/release_notes.txt
+++ b/fastlane/metadata/es-MX/release_notes.txt
@@ -1,2 +1,2 @@
-• This Valentine's Day, we have good news if you're planning on getting back together with your iPad after taking a break: A bug that could cause Signal to crash when attempting to re-link an unlinked device has been fixed.
-• If you're in a relationship with multiple devices, group call notifications on your iPhone will be automatically dismissed when you answer that call on your iPad or Desktop.
+• Hemos corregido un error que podía causar que Signal se bloqueara al intentar volver a vincular un iPad desvinculado.
+• Ahora, las notificaciones de llamadas grupales en tu iPhone se descartarán automáticamente cuando respondas esa llamada en tu iPad u ordenador.
