--- a/fastlane/metadata/hr/release_notes.txt
+++ b/fastlane/metadata/hr/release_notes.txt
@@ -1,2 +1,2 @@
-• This Valentine's Day, we have good news if you're planning on getting back together with your iPad after taking a break: A bug that could cause Signal to crash when attempting to re-link an unlinked device has been fixed.
-• If you're in a relationship with multiple devices, group call notifications on your iPhone will be automatically dismissed when you answer that call on your iPad or Desktop.
+• Ispravili smo programsku pogrešku koja je uzrokovala pad Signala prilikom pokušaja ponovnog povezivanja nepovezanog iPada.
+• Obavijesti o grupnim pozivima na vašem iPhoneu sada se automatski odbacuju kada odgovorite na taj poziv na svom iPadu ili računalu.
