--- a/fastlane/metadata/sk/release_notes.txt
+++ b/fastlane/metadata/sk/release_notes.txt
@@ -1,2 +1,2 @@
-• This Valentine's Day, we have good news if you're planning on getting back together with your iPad after taking a break: A bug that could cause Signal to crash when attempting to re-link an unlinked device has been fixed.
-• If you're in a relationship with multiple devices, group call notifications on your iPhone will be automatically dismissed when you answer that call on your iPad or Desktop.
+• Opravili sme chybu, ktorá spôsobovala zlyhanie aplikácie Signal pri pokuse o opätovné prepojenie neprepojeného iPadu.
+• Upozornenia na skupinové hovory na vašom iPhone sa teraz automaticky zatvoria, keď hovor prijmete na iPade alebo Desktope.
