--- a/fastlane/metadata/sv/release_notes.txt
+++ b/fastlane/metadata/sv/release_notes.txt
@@ -1,2 +1,2 @@
-• This Valentine's Day, we have good news if you're planning on getting back together with your iPad after taking a break: A bug that could cause Signal to crash when attempting to re-link an unlinked device has been fixed.
-• If you're in a relationship with multiple devices, group call notifications on your iPhone will be automatically dismissed when you answer that call on your iPad or Desktop.
+• Vi har åtgärdat ett fel som kunde få Signal att krascha när man försökte länka om en iPad som inte var länkad.
+• Aviseringar om gruppsamtal på din iPhone avfärdas nu automatiskt när du svarar på samtalet på din iPad eller i Desktop.
