--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,2 +1,2 @@
-• This Valentine's Day, we have good news if you're planning on getting back together with your iPad after taking a break: A bug that could cause Signal to crash when attempting to re-link an unlinked device has been fixed.
-• If you're in a relationship with multiple devices, group call notifications on your iPhone will be automatically dismissed when you answer that call on your iPad or Desktop.
+• Спеціально до Дня закоханих ми підготували подарунок для усіх, хто планує повернутися до свого iPad після перерви у стосунках: ми виправили помилку, через яку Signal іноді закривався під час спроби знову під'єднати старий пристрій.
+• А якщо ви в стосунках з кількома пристроями, сповіщення про групові виклики на iPhone тепер автоматично прибиратимуться, коли ви відповідатимете за допомогою iPad чи комп'ютера.
